--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -192,9 +192,17 @@ header {
     flex-direction: column; 
     align-items: center;    
     padding: 20px;
+    position: relative;
 }
 .car--name {
     text-align: center;
+}
+.link--car {
+    text-decoration: none;
+    margin: 10px 0;
+}
+.link--car:hover {
+    text-decoration: underline;
 }
 
 .car--info table tr,
